# SecOpsTM

./: .gitignore  .rooignore  README.md  ROADMAP_SUMMARY.md  SECURITY.md  TOOLING_DOCUMENTATION.md  action.yml  architecture.md  decisions.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: coverage_check.yml  sync-wiki.yml  threat-model.yml
config/: ai_config.yaml  context.yaml  prompts.yaml  user_context.example.json
docs/: customizing_prompts.md  data_collection_guide.md  defining_threat_models.md  enriching_ai_threats.md  examples.md  features.md  gdaf.md  getting_started.md  index.md  project_onboarding_questionnaire.md  threat_modeling_guide.md  usage.md  user_context.md  workflow.md
docs/technical_documentation/: architecture_overview.md  index.md
output/example/: stride_mitre_report__example.html  tm_diagram_example.html
tests/: test_accepted_risks.py  test_ai_cache.py  test_ai_service.py  test_asset_technique_mapper.py  test_attack_chain_analyzer.py  test_attack_flow_builder.py  test_attack_id_validator.py  test_bom_loader.py  test_ciso_triage.py  test_custom_threats.py  test_data_loader.py  test_diagram_generator.py  test_diagram_service.py  test_embedding_factory.py  test_export_service.py  test_gate_check.py  test_gdaf_engine.py  test_generation_utils.py  test_graphviz_to_json_metadata.py  test_graphviz_to_konva.py  test_iac_plugins.py  test_litellm_provider.py  test_model_completeness.py  test_model_management_service.py  test_model_parser.py  test_model_validator.py  test_models_module.py  test_ollama_provider.py  test_project_generation.py  test_prompts.py  test_rag_functionality.py  test_report_generator.py  test_report_generator_extended.py  test_report_serializer.py  test_server.py  test_svg_generator.py  test_svg_generator_extended.py  test_terraform_plugin.py  test_threat_consolidator.py  test_threat_graph.py  (+6 more)
threatModel_Template/: Advanced_Cloud_WebApp.md  Kubernetes_Helm_Cluster.md  On-Prem_Enterprise_Network.md  Serverless_AWS_Lambda.md  Three_Tier_Architecture.md
threatModel_Template/Advanced_Cloud_WebApp/: model.md
threatModel_Template/CI_CD_Pipeline/: model.md
threatModel_Template/Cloud_Native_Architecture/: model.md
threatModel_Template/Data_Warehouse_Data_Lake/: model.md
threatModel_Template/IoT/: model.md
threatModel_Template/Kubernetes_Helm_Cluster/: model.md
threatModel_Template/Microservices_Architecture/: model.md
threatModel_Template/Mobile_Application/: model.md
threatModel_Template/On-Prem_Enterprise_Network/: model.md
threatModel_Template/Serverless_AWS_Lambda/: model.md
threatModel_Template/Simple_Monolithic_Web_Application/: model.md
threatModel_Template/Three_Tier_Architecture/: model.md
threatModel_Template/Traditional_Enterprise_Network/: model.md
threatModel_Template/Zero_Trust/: model.md
threat_analysis/: __main__.py  config.py  config_generator.py  custom_threats.py  mitigation_suggestions.py  severity_calculator_module.py  threat_rules.py  update_config.py  utils.py
threat_analysis/ai_engine/: embedding_factory.py  prompt_loader.py  rag_service.py
threat_analysis/core/: accepted_risks.py  ai_cache.py  asset_technique_mapper.py  attack_chain.py  attack_id_validator.py  bom_loader.py  cve_service.py  data_loader.py  gdaf_engine.py  mitre_mapping_module.py  model_completeness.py  model_factory.py  model_parser.py  model_validator.py  models_module.py  report_serializer.py  threat_consolidator.py  threat_ranker.py  vex_loader.py
threat_analysis/external_data/: capec_to_mitre_structured_mapping.json  data_dictionary.xml
threat_analysis/generation/: attack_flow_builder.py  attack_flow_generator.py  diagram_generator.py  graphviz_to_json_metadata.py  graphviz_to_konva.py  report_generator.py  svg_generator.py  utils.py
threat_analysis/iac_plugins/: __init__.py  ansible_plugin.py  terraform_plugin.py
threat_analysis/server/: __init__.py  ai_service.py  diagram_service.py  events.py  export_service.py  (+3 more)
tooling/: build_vector_store.py  capec_to_mitre_builder.py  test_rag_generation.py
(+207 files in other folders)
