[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SecOpsTM"
version = "1.1.1-alpha"
authors = [
  { name="ellipse2v", email="your.email@example.com" }, # Placeholder email
]
description = "A STRIDE threat analysis framework with MITRE ATT&CK integration."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pytm",
    "Flask[async]",
    "Jinja2",
    "graphviz",
    "pandas",
    "PyYAML",
    "lxml",
    "openpyxl",
    "msoffcrypto-tool",
    "aiohttp",
]

[project.optional-dependencies]
# Curated AI extras — LLM + vector store + local embeddings (no LangChain).
# Install with:  pip install -e ".[ai]"
#
# For the full AI/ML stack (LangChain, jq, unstructured…) use requirements.txt:
#   pip install -r requirements.txt
#
# INTENTIONAL DIVERGENCE FROM requirements.txt
# This group is intentionally lighter: it omits langchain-* and heavy data-pipeline
# deps (jq, unstructured) that most users don't need just for AI threat enrichment.
# requirements.txt is the authoritative list for contributors and CI pipelines.
ai = [
    "litellm>=1.32.2",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.7.0",
]

[project.urls]
"Homepage" = "https://github.com/ellipse2v/SecOpsTM"
"Bug Tracker" = "https://github.com/ellipse2v/SecOpsTM/issues"

[project.scripts]
secopstm = "threat_analysis.__main__:main"

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory
include = ["threat_analysis*"] # Include threat_analysis and its subpackages

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tooling", "venv-py310", "venv", ".venv", "output", "node_modules"]

[tool.coverage.run]
omit = ["tests/*"]
